--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
       - echo 'Installing dependencies'
       - curl -s "https://get.sdkman.io" | bash
       - export SDKMAN_DIR="$HOME/.sdkman"
-      - [[ -s "$HOME/.sdkman/bin/sdkman-init.sh" ]] && . "$HOME/.sdkman/bin/sdkman-init.sh"
+      - '[ -s "$HOME/.sdkman/bin/sdkman-init.sh" ] && . "$HOME/.sdkman/bin/sdkman-init.sh"'
       - sdk install kotlin
       - curl -O https://repo1.maven.org/maven2/org/junit/platform/junit-platform-console-standalone/1.8.2/junit-platform-console-standalone-1.8.2.jar
       - kotlinc Calculator.kt CalculatorTest.kt -d classes -cp junit-platform-console-standalone-1.8.2.jar
