--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,12 +8,15 @@ batch:
 
 phases:
   install:
+    runtime-versions:
+      java: corretto11 
     commands:
       - echo 'Installing dependencies'
-      - curl -s "https://get.sdkman.io" | bash
-      - export SDKMAN_DIR="$HOME/.sdkman"
-      - '[ -s "$HOME/.sdkman/bin/sdkman-init.sh" ] && . "$HOME/.sdkman/bin/sdkman-init.sh"'
-      - sdk install kotlin
+      - KOTLIN_VERSION="1.8.20" # Replace with your desired version
+      - curl -o kotlin-compiler.zip -L "https://github.com/JetBrains/kotlin/releases/download/v${KOTLIN_VERSION}/kotlin-compiler-${KOTLIN_VERSION}.zip"
+      - unzip kotlin-compiler.zip -d /usr/local
+      - export PATH=$PATH:/usr/local/kotlinc/bin
+      - kotlin -version
       - curl -O https://repo1.maven.org/maven2/org/junit/platform/junit-platform-console-standalone/1.8.2/junit-platform-console-standalone-1.8.2.jar
       - kotlinc Calculator.kt CalculatorTest.kt -d classes -cp junit-platform-console-standalone-1.8.2.jar
   pre_build:
