--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,7 +25,7 @@ phases:
     commands:
       - echo 'Running Kotlin Tests'
       - kotlinc src/main/kotlin/*.kt src/test/kotlin/*.kt -d classes -cp junit-platform-console-standalone-1.8.2.jar
-      - java -jar junit-platform-console-standalone-1.8.2.jar --class-path classes --scan-class-path
+      - java -jar junit-platform-console-standalone-1.8.2.jar --class-path classes --select-class CalculatorAddTest --select-class CalculatorMultiplyTest
   post_build:
     commands:
       - echo "Test execution completed"
