--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,6 +25,8 @@ phases:
     commands:
       - echo 'Running Kotlin Tests'
       - kotlinc src/main/kotlin/*.kt src/test/kotlin/*.kt -d classes -cp junit-platform-console-standalone-1.8.2.jar
+      - find classes -name "*.class"
+      - codebuild-glob-search "**/*.class"
       - java -jar junit-platform-console-standalone-1.8.2.jar --class-path classes --select-class CalculatorAddTest --select-class CalculatorMultiplyTest
   post_build:
     commands:
