--- a/buildspec.yml
+++ b/buildspec.yml
@@ -28,7 +28,8 @@ phases:
       - find classes -name "*.class"
       - codebuild-glob-search "**/*.class"
       - java -jar junit-platform-console-standalone-1.8.2.jar --class-path classes --select-class CalculatorAddSubtractTest
-      - codebuild-tests-run \
+      - |
+        codebuild-tests-run \
          --test-command \
            'java -jar junit-platform-console-standalone-1.8.2.jar --class-path classes \
               $(for file in "$CODEBUILD_CURRENT_SHARD_FILES"; do
